		- The code has been refactored to be more consistent, predictable and self-documenting
		- Vector2 and Vector2i as well as v2_ and v2i_ functions are typedeffed / #defined to Vector2f32 and Vector2s32

	- Graphics
		- Added gfx_reserve_vbo_bytes so you can allocate a big vbo once instead of slowly doubling it, causing lag spikes

	- Misc
		- Changed default ortho projection to match window size
		- Cleanups

## v0.01.006 - Particles, Matrix3, extensions

	- Build configuration
		- Introduced an "extensions" system to be able to compile some extensions that might help with your game.
			- To enable extensions, do #define OOGABOOGA_ENABLE_EXTENSIONS 1, then #define OOGABOOGA_EXTENSION_XXXXX 1
				Also call ext_update(delta_time) and ext_draw() each frame.
	
	- Implemented a Particles extension for particle emissions
		- struct Emission_Config
		- Emission_Handle emit_particles(config, position)
		- void emission_reset(Emission_Handle h);
		- void emission_set_config(Emission_Handle h, Emission_Config config);
		- void emission_set_position(Emission_Handle h, Vector2 pos);
		- void emission_release(Emission_Handle h);
	
	- Misc
		- Added void *growing_array_add_multiple_empty(void **array, u64 count)
		- Added void growing_array_add_multiple(void **array, void *items, u64 count)
		- Added Matrix3 with:
			- Matrix4 m3_to_m4(Matrix3 mat3)
			- Matrix3 m3_scalar(float32 scalar)
			- Matrix3 m3_identity()
			- Matrix3 m3_make_translation(Vector2 translation)
			- Matrix3 m3_make_rotation(float32 radians)
			- Matrix3 m3_make_scale(Vector2 scale)
			- Matrix3 m3_mul(Matrix3 a, Matrix3 b)
			- Matrix3 m3_translate(Matrix3 m, Vector2 translation)
			- Matrix3 m3_rotate(Matrix3 m, float32 radians)
			- Matrix3 m3_scale(Matrix3 m, Vector2 scale)
			- Matrix3 m3_inverse(Matrix3 m)
			- Vector3 m3_transform(Matrix3 m, Vector3 v)
		- Fixed Arena so it actually works
		- Fixed sys keys not being handled as expected (such as LALT)
		- Added some arena procedures: