@@ -96,7 +96,7 @@ Simply add `#include "oogabooga/examples/some_example.c"` to build.c and compile
 Other than examples, a great way to learn is to delve into the code of whatever module you're using. The codebase is written with this in mind.
 
 ## Known bugs & issues
-- Window positioning & sizing is fucky wucky
+- If DPI changes in runtime, updating window position or size will be a bit weird
 - Converting 24-bit audio files doesn't really work
 - Compiling with msys, cygwin, mingw etc fails
 
