@@ -15,8 +15,8 @@ bool button(string label, Vector2 pos, Vector2 size, bool enabled);
 int entry(int argc, char **argv) {
 	
 	window.title = STR("Audio test");
-	window.scaled_width = 1280; // We need to set the scaled size if we want to handle system scaling (DPI)
-	window.scaled_height = 720; 
+	window.point_width = 1280; // We need to set the scaled size if we want to handle system scaling (DPI)
+	window.point_height = 720; 
 	window.x = 200;
 	window.y = 90;
 	window.clear_color = hex_to_rgba(0x6495EDff);
